--- a/example/index.html
+++ b/example/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
-    <title>AppSW Dummy Website</title>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to AppSW Dummy Website</h1>
-    </header>
-    <main>
-      <div class="content-box">
-        <h2>Hello, World!</h2>
-        <p>This is a simple AppSW dummy webpage. Use this template as a starting point for your projects.</p>
-        <a href="/page2.html" class="btn">Go to page 2</a>
-      </div>
-    </main>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/styles.css" />
+        <title>QuickSW Dummy Website</title>
+    </head>
+    <body>
+        <header>
+            <h1>Welcome to QuickSW Dummy Website</h1>
+        </header>
+        <main>
+            <div class="content-box">
+                <h2>Hello, World!</h2>
+                <p>This is a simple QuickSW dummy webpage. Use this template as a starting point for your projects.</p>
+                <a href="/page2.html" class="btn">Go to page 2</a>
+            </div>
+        </main>
 
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
 
-    <footer>
-      <p>&copy; 2024 AppSW Dummy Website | Created by Your Name</p>
-    </footer>
+        <footer>
+            <p>&copy; 2024 QuickSW Dummy Website | Created by Your Name</p>
+        </footer>
 
-    <script src="/script.js"></script>
-    <script src="/service-worker-handler.js"></script>
-  </body>
+        <script src="/script.js"></script>
+        <script src="/service-worker-handler.js"></script>
+    </body>
 </html>
