--- a/example/page2.html
+++ b/example/page2.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
-    <title>AppSW Dummy Website</title>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to AppSW Dummy Website</h1>
-    </header>
-    <main>
-      <div class="content-box">
-        <h2>Page 2!</h2>
-        <a href="/index.html" class="btn">Go back to page 1</a>
-      </div>
-    </main>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/styles.css" />
+        <title>QuickSW Dummy Website</title>
+    </head>
+    <body>
+        <header>
+            <h1>Welcome to QuickSW Dummy Website</h1>
+        </header>
+        <main>
+            <div class="content-box">
+                <h2>Page 2!</h2>
+                <a href="/index.html" class="btn">Go back to page 1</a>
+            </div>
+        </main>
 
-    <footer>
-      <p>&copy; 2024 AppSW Dummy Website | Created by Your Name</p>
-    </footer>
+        <footer>
+            <p>&copy; 2024 QuickSW Dummy Website | Created by Your Name</p>
+        </footer>
 
-    <script src="/script.js"></script>
-    <script src="/service-worker-handler.js"></script>
-  </body>
+        <script src="/script.js"></script>
+        <script src="/script2.js"></script>
+    </body>
 </html>
